Test/errors/err_jsx_mismatched_close.cb
// The element sugar requires the closing tag to match the opening tag.
extern int main()
{
    expect_error("mismatched closing tag");
    <View></Box>;
}
